--- a/configs/client.yaml
+++ b/configs/client.yaml
@@ -4,7 +4,7 @@ mqtt:
   client_id: java-1
   keepalive_secs: 30
   protocol_version: 3  # MQTT 3.1
-  clean_session: true  # whether to start a clean session (default)
+  clean_session: false  # whether to start a clean session (default)
 
 retry:
   enabled: true
@@ -19,7 +19,7 @@ publish:
 
 qos:
   location: 0
-  offer: 0
+  offer: 1
   ride: 0
 
 payload_bytes:
